--- a/Sosmed.html
+++ b/Sosmed.html
@@ -70,7 +70,7 @@
         <a href="#" class="icon" onclick="toggleNavbar()">&#9776;</a>
         <a href="#">Home/halaman utama</a>
         <a href="#">About/informasi lebih lanjut</a>
-        <a href="#">Sosmed</a>
+        <a href="https://jwpe120.github.io/akael_25/Sosmed.html">Sosmed</a>
         <a href="#">Credit</a>
     </div>
     <div class="container">
