--- a/Sosmed.html
+++ b/Sosmed.html
@@ -68,10 +68,10 @@
 <body>
     <div class="navbar" id="myNavbar">
         <a href="#" class="icon" onclick="toggleNavbar()">&#9776;</a>
-        <a href="#">Home/halaman utama</a>
-        <a href="#">About/informasi lebih lanjut</a>
-        <a href="https://jwpe120.github.io/akael_25/Sosmed.html">Sosmed</a>
-        <a href="#">Credit</a>
+        <a href="https://jwpe120.github.io/akael_25/Home.html#">Home/halaman utama</a>
+        <a href="https://jwpe120.github.io/akael_25/About.html#">About/informasi lebih lanjut</a>
+        <a href="https://jwpe120.github.io/akael_25/Sosmed.html#">Sosmed</a>
+        <a href="https://jwpe120.github.io/akael_25/Credit.html#">Credit</a>
     </div>
     <div class="container">
         <h1>AKL_25</h1>
