--- a/Index.html
+++ b/Index.html
@@ -63,10 +63,10 @@
       setTimeout(() => {
         box.style.opacity = '1';
         setTimeout(() => {
-          window.location.href = 'https://jwpe120.github.io/akael_25/Index2.html#'; // Ganti dengan URL halaman tujuan Anda
-        }, 3000); // Setelah 3 detik, arahkan pengguna ke halaman tujuan
+          window.location.href = 'https://jwpe120.github.io/akael_25/Index2.html#';
+        }, 3000);
       }, 1000);
-    }, 2000);
+    }, 3000); // Mengubah waktu tunggu menjadi 3 detik
   </script>
 </body>
 </html>
