--- a/Index2.html
+++ b/Index2.html
@@ -63,8 +63,8 @@
       setTimeout(() => {
         box.style.opacity = '1';
         setTimeout(() => {
-          window.location.href = 'https://jwpe120.github.io/akael_25/Index3.html#'; // Ganti dengan URL halaman tujuan Anda
-        }, 3000); // Setelah 3 detik, arahkan pengguna ke halaman tujuan
+          window.location.href = 'https://jwpe120.github.io/akael_25/Index3.html#';
+        }, 3000);
       }, 1000);
     }, 2000);
   </script>
