--- a/Index.html
+++ b/Index.html
@@ -3,6 +3,11 @@
 <head>
     <meta http-equiv="refresh" content="5;url=https://jwpentertainments.eu.org/web/proyek/akl1">
     <title>Pengalihan Halaman</title>
+ <style>
+  p {
+   text-align : center;
+  } 
+ </style>
 </head>
 <body>
     <p>Halaman ini akan mengalihkan Anda ke halaman lain dalam 5 detik. Jika tidak, klik <a href="https://jwpentertainments.eu.org/web/proyek/akl1">di sini</a>.</p>
